@@ -1,3 +1,7 @@
+2006-05-23  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Vowel changing suggestions
+
 2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Add manual pages for voikkospell and voikkohyphenate
